Added animation support (very hacky!)

--- a/status/2021-09-29.md
+++ b/status/2021-09-29.md
@@ -5,6 +5,8 @@
 
 * The rules of AGB have been (initially) formalised, in `notes/AGBrules.md`.
 * The core rules of AGB have been implemented in the simulator at `code/simulateAGB.py`
+* Initial animation support has been added (really rough/hacky!)
+* Experimented with a few different types of graphs (grid/lattice graphs seem like an interesting start)
 
 ## Still to do
 * Add highlight for the vertices P1 and P2 chose (circle around the node?)
