Update status report

--- a/status/2021-09-29.md
+++ b/status/2021-09-29.md
@@ -7,9 +7,10 @@
 * The core rules of AGB have been implemented in the simulator at `code/simulateAGB.py`
 * Initial animation support has been added (really rough/hacky!)
 * Experimented with a few different types of graphs (grid/lattice graphs seem like an interesting start)
+* Wrote up a quick draft of the outline/description
 
 ## Still to do
 * Add highlight for the vertices P1 and P2 chose (circle around the node?)
-* Animation support for visualisations (Probably want individual images plus the animation)
 * Decide on a "good" consistent layout for graph visualisations (Kamada-Kawai is okay for now)
-* Implement some more strategies for burning vertices (maybe allowing user input for testing purposes?)
+* Implement some more strategies for burning vertices (maybe allowing user input for testing purposes?) Core question - considering probabilistic strategies?
+* Add logging for output of simulation (number/proportion of vertices burned, 
