Tidied up minutes (somewhat)

--- a/minutes/2021-09-29.md
+++ b/minutes/2021-09-29.md
@@ -7,6 +7,21 @@ This week's status report was discussed, and a demonstration was shown using a 2
 
 * I could adapt the grid graph to turn it into a torus, allowing for edges to wrap around making each node functionally equivalent. This bears resemblance to a number of other existing games in games theory (Angels and Demons being one example, along with the analogy of 2 people selling choc ices on an infinitely long beach - the Nash equilibrium occurs when both players face their back to one another and walk along different halves of the beach!), and this problem is probably PSPACE-HARD. This presents some visualisation challenges, with a possible solution being to present multiple diagrams, all of the same torus, but with a different center.
 
+* I could adapt the visualisation to show a darker colour for vertexes which have been burned for a longer period of time, but I also shouldn't prioritise the visualisation - I'll need some images later, but at least for now it's mainly a tool to build intuition.
+
+## Aims for this week
+
+* Improve logging capabilities of the simulator - ideally I'll want to run numerous trials of the same thing and see what happens. In particular, logging "too much" data is probably better than not logging enough - cluster counting was a suggestion made during the meeting.
+
+* After this, develop different strategies for each player, and compare them against each other.
+
+* If I get time, start exploring cluster counting in a bit more depth (for instance the size of clusters, the number of them, distribution of these values over many trials...)
+
+
+### Misc. notes
+
+(i'm just keeping these here in case I need anything, please don't read this!)
+
 Persistent homology
 
 "How many clusters? Any bounds?" Not easy! Does this grow with n?
