--- a/status/2021-10-06.md
+++ b/status/2021-10-06.md
@@ -8,7 +8,7 @@
 * Some very minor polish in the graphics output
 * Made the option to produce images/animations of a simulation optional - as expected this is a huge bottleneck in the simulation process
 * Found a paper on counting clusters on a grid in the entirely random case (i.e every square has a 1/2 chance of being one colour) - I'm not sure it's directly relevant, but the ideas within it could be a good starting point. https://sites.math.washington.edu/~reu/papers/current/jacob/clusters
-* Ran a few very basic experiments - by the looks of things, with two random strategies the expected score is normally distributed around half the maximum score, which suggests the game is (rightly) unbiased towards either player. I compared the grid and the torus results and their behaviour doesn't seem that different.
+* Ran a few very basic experiments - by the looks of things, with two random strategies the expected score is normally distributed around half the maximum score, which suggests the game is (rightly) unbiased towards either player. I compared the grid and the torus results and their behaviour doesn't seem that different, which makes sense for comparing random strategies.
 
 
 ## Still to do
