Ran betweenness experiment + experiment data

--- a/status/2021-10-13.md
+++ b/status/2021-10-13.md
@@ -6,6 +6,7 @@
 
 * Degree vs random on grid graph: Not much difference to the random vs random case, since the graph is mostly homogenous aside from the boundaries.
     * Conjecture: Degree vs random gives a slight edge to P1, but this advantage diminishes as the side of the grid increases, since the proportion of boundary vertices decreases.
+    * This _seems_ to be correct so far - 25x25 grid has P1 with 53% on average, and 50x50 has 51%, but might not be statistically significant
 * Betweenness centrality vs random: P1 has very few clusters, but this is quite bad in general: newly selected nodes are "close" to nodes the player's already chosen, so there's a lot of wasted overlap.
     * Conjecture: Very biased towards P2. I should consider computing the betweenness centrality over the subgraph induced by unburned nodes, so the "center" keeps shifting. This should alleviate at least some of the inherent problems of the betweenness burn strategy
 
