More burn strategies + status report

--- a/status/2021-10-13.md
+++ b/status/2021-10-13.md
@@ -2,13 +2,40 @@
 
 ## What I've done
 
+### Development
+
 * Developed some new strategies, and tested these in a few different experiments:
 
 * Degree vs random on grid graph: Not much difference to the random vs random case, since the graph is mostly homogenous aside from the boundaries.
-    * Conjecture: Degree vs random gives a slight edge to P1, but this advantage diminishes as the side of the grid increases, since the proportion of boundary vertices decreases.
+    * Conjecture: Degree vs random gives a slight edge to P1, but this advantage diminishes as the size of the grid increases, since the proportion of boundary vertices decreases.
     * This _seems_ to be correct so far - 25x25 grid has P1 with 53% on average, and 50x50 has 51%, but might not be statistically significant
 * Betweenness centrality vs random: P1 has very few clusters, but this is quite bad in general: newly selected nodes are "close" to nodes the player's already chosen, so there's a lot of wasted overlap.
     * Conjecture: Very biased towards P2. I should consider computing the betweenness centrality over the subgraph induced by unburned nodes, so the "center" keeps shifting. This should alleviate at least some of the inherent problems of the betweenness burn strategy
+    * Looks to be correct, 25x25 has P1 with around 30% on average. Try the subgraph idea, while also seeing if this method can be made more efficient (at the moment computing betweenness centrality looks _much_ slower than other methods)
+    * Note: Computing betweenness centrality is O(VE), which is incredibly slow for even a 25x25 grid graph. NetworkX allows for an approximate computation using k nodes instead of the whole graph which may help, but I don't need the exact values of centrality, just whatever's biggest.
+    * Subgraphs appear to have the same problem to a slightly lesser extent, including the performance issues.
+* Closeness centrality has many of the same issues with little apparent difference, so I decided not to run a formal experiment for this.
+* In general, centrality measures don't seem like a good set of measures to use to define strategies: in particular, the nodes they pick are generally very close to previous rounds, so there's a lot of overlap. They're also relatively slow to compute.
+* I developed a new strategy to try and account for this: The initial vertex chosen is random. After this, we then pick the vertex that is furthest away from any of that player's own vertices, without travelling through the opponent's vertices.
+    * Unfortunately this didn't seem to outperform the random case on a grid graph, plus it's very slow (though I think I could make it faster - rather than comparing all pairs of vertices with one unburned and one of the player's own vertices, I could simply consider a ball around each unburned vertex and "fan out" until it reaches one of our own vertices).
+    * This method could be an effective counter to centrality-based measures since it aims to minimise overlap - it could be useful to run more experiments here.
+
+### Reading
+
+
+* The original paper on clusters on a finite grid didn't seem very useful. The core result of the ratio between expected number of clusters and grid size seems useful and I might quote this, but the techniques used seem very focused on probability theory, and the paper only gives precise values for n by m grids where n is at most 3. The main reason for this seems to be that they focus on polymino counting, which doesn't scale well for larger grids (and we expect our graphs to contain a few very large clusters anyway).
+* Found a key term to look for: "monochromatic components in 2-colourings"
+    * Potential idea: Look for results on counting monochromatic components on general two-colourings, then use those as bounds for our case. Expect our subset of 2-colourings to be much smaller in general (general case is 2^V) - want to find common properties of this subset. Enumerating them may be possible, if not very feasible.
+    * Could come up with results about the maximum number of rounds required to burn a graph, which will give a finite number of burning sequences, and each of these induces two (very similar) colourings.
 
 
 ## Still to do
+
+* Centrality measures seem to be the wrong direction - try something else
+    * Make the new strategy I mentioned more efficient with the "fan out" method
+* Try coming up with the maximum/minimum number of clusters for small/simple graphs
+    * I'm finding it tricky to work with the larger grid graphs, so hopefully being able to work on smaller examples, mostly by hand, will help me understand the problem a bit better
+* Use my new key term to find more papers - try and find existing results for monochromatic components, and some techniques I could apply.
+    * Identify differences between general 2-colourings and 2-colourings induced by graph burning
+
+
