--- a/minutes/2021-10-13.md
+++ b/minutes/2021-10-13.md
@@ -3,7 +3,16 @@
 While discussing the most recent status report:
 
 * I should take care when examining strategies on grid graphs - in some sense, grids aren't very "interesting", because they look very similar almost everywhere. I might want to try considering graphs with a power law distribution of degrees, which occur quite frequently in applications. Plenty of these datasets are available to download (a map of Wikipedia was given as one example), and NetworkX allows for generating these sequences and constructing graphs from them.
-* The formatting for my status reports is quite helpful (it shows my train of thought quite well), but it would also be useful to write more formal descriptions of some things such as burn strategies (similar to how I wrote `AGBrules.md`. This should help me with content for the final report, particularly if I insert it into the existing template.) 
+* The formatting for my status reports is quite helpful (it shows my train of thought quite well), but it would also be useful to write more formal descriptions of some things such as burn strategies (similar to how I wrote `AGBrules.md`. This should help me with content for the final report, particularly if I insert it into the existing template.)
+* I should remain aware of the time I have for the project - especially when considering something very new, there's the potential to travel down rabbit holes and take on much more work than is reasonable, so don't be afraid to discard a paper if its abstract doesn't seem very useful.
+* Some suggestions for speeding up betweenness centrality were discussed, in particular how the results could be stored and updated after each round, instead of being computed anew. Will sent a paper in the meeting chat which may discuss this, if I wanted to look into this any further
+
+## Plan for next week
+
+* Presuming Jess is having an update day on Thursday the 21st, we'll cancel the Wednesday meeting and meet with her on the Thursday instead.
+* Experiment with different strategies on more natural graphs, exhibiting the power law structure.
+* Continue reading on monochromatic components of 2-colourings, see if there's any techniques which could apply here.
+* Start writing more formal descriptions of different strategies, using the project report template.
 
 
 # Notes
@@ -28,8 +37,6 @@ For metrics on graphs - check Temporal link from Will
 And be aware of time!
 
 Meet with Jess on the Thursday instead
-
-PhDs - start looking now. Can apply as late as March, but earlier is better. Will ask Jess next week
 
 cluster, maybe?
 
