Filled in some details on template + wrote up burn strategies

--- a/mpaper/example.tex
+++ b/mpaper/example.tex
@@ -6,9 +6,9 @@
 
 \begin{document}
 
-\title{An Example Paper for MSci Submission}
-\author{Jeremy Singer}
-\matricnum{12345678}
+\title{Counting Monochromatic Components in Adversarial Graph Burning}
+\author{Lewis Dyer}
+\matricnum{2299195}
 
 \maketitle
 
