Some small examples of cluster counting w/ proof of paths

--- a/status/2021-10-21.md
+++ b/status/2021-10-21.md
@@ -2,8 +2,23 @@
 
 ## What I've done
 
+
+### Development
+
 * Tried out generating graphs using a powerlaw distribution
 * Really interesting result: On a powerlaw graph, most combinations of strategies I've tried seem to give a very similar number of clusters to each player - in most cases, exactly the same number. My guess is that this is based on the *graph*, not the strategies.
     * Conjecture: This might be a quirk of how the Havel-Hakimi algorithm constructs graphs from degree sequences. Specifically, high degree nodes are connected to other high degree nodes, while by the time the algorithm reaches the low degree nodes they form new connected components, so each component is close to being its own complete graph - hence, there are few opportunities for clusters to separate.
 
+### Reading
+
+* "Monochromatic connected subgraphs"
+
+The lit review's quite challenging so far: There appears to be not much research on counting monochromatic components for a specific colouring:
+* A number of related results for edge colourings, very few for vertex colourings
+* IDEA: Treat the path case like a string of RGBs!!!!
+* another idea: given a colouring, can it be obtained via AGB?
+
+
 ## Still to do
+
+* Try a more realistic example to get around the quirks of Havel-Hakimi. Maybe the Game of Thrones example from the pyvis tutorial, as a very basic starting point?
