Noted proof technique in status report, to polish

--- a/status/2021-10-21.md
+++ b/status/2021-10-21.md
@@ -14,9 +14,11 @@
 * "Monochromatic connected subgraphs"
 
 The lit review's quite challenging so far: There appears to be not much research on counting monochromatic components for a specific colouring:
-* A number of related results for edge colourings, very few for vertex colourings
+* A number of related results for edge colourings, very few for vertex colourings - not sure how much can transfer between them
 * IDEA: Treat the path case like a string of RGBs!!!!
 * another idea: given a colouring, can it be obtained via AGB?
+
+* I proved the maximum number of clusters for paths - my general technique was to partition the graph into multiple connected regions, indicate a burning sequence with precisely one red cluster per region, then show that any attempt to induce another cluster in a region ends up "merging" with an adjacent region, so the number of regions is the upper bound. Could I adapt this technique for other types of graphs?
 
 
 ## Still to do
