Tidying up status report

--- a/status/2021-10-21.md
+++ b/status/2021-10-21.md
@@ -2,7 +2,6 @@
 
 ## What I've done
 
-
 ### Development
 
 * Tried out generating graphs using a powerlaw distribution
@@ -11,16 +10,17 @@
 
 ### Reading
 
-* "Monochromatic connected subgraphs"
-
-The lit review's quite challenging so far: There appears to be not much research on counting monochromatic components for a specific colouring:
+The lit review's quite challenging so far: There appears to be not much research on counting monochromatic components for a specific colouring (though there are a few results on the existence of components of a certain size on *any* colouring for large enough graphs)
 * A number of related results for edge colourings, very few for vertex colourings - not sure how much can transfer between them
-* IDEA: Treat the path case like a string of RGBs!!!!
-* another idea: given a colouring, can it be obtained via AGB?
 
-* I proved the maximum number of clusters for paths - my general technique was to partition the graph into multiple connected regions, indicate a burning sequence with precisely one red cluster per region, then show that any attempt to induce another cluster in a region ends up "merging" with an adjacent region, so the number of regions is the upper bound. Could I adapt this technique for other types of graphs?
+* I proved the maximum number of clusters for paths on n vertices is ceiling(n/3) - my general technique was to partition the graph into multiple connected regions, indicate a burning sequence with precisely one red cluster per region, then show that any attempt to induce another cluster in a region ends up "merging" with an adjacent region, so the number of regions is the upper bound. Could I adapt this technique for other types of graphs?
+
+Rough idea: I've been thinking about the subset of colourings that AGB produces, but it may be useful to go in the other direction. Given a colouring on a graph, is it producible by AGB?
+    * It may turn out that results about the maximum number of clusters on a graph are non-constructive in nature: I know how many clusters there are, and maybe what the final result is, but nothing about what vertices I need to burn in get there.
 
 
 ## Still to do
 
 * Try a more realistic example to get around the quirks of Havel-Hakimi. Maybe the Game of Thrones example from the pyvis tutorial, as a very basic starting point?
+* Maybe try a formal proof for the maximum number of clusters for some other type of graph (perhaps caterpillar graphs, or something else path-like)
+* It's fairly clear that adversarial graph burning contains regular graph burning (when both players pick the same vertices). I think this connection could be useful later, perhaps for giving some upper bounds, so I think it would be good to formalise this a bit more.
