Status report uploaded

--- a/status/2021-10-27.md
+++ b/status/2021-10-27.md
@@ -2,5 +2,10 @@
 
 * Set up an example with the Game of Thrones co-occurrence network, to consider more natural graphs without the inherent flaws of the Havel-Hakimi algorithm. (This look longer than expected due to some debugging with Python imports/things not working as intended)
 * Wrote some notes on "burning sequences", providing a convenient notation to describe any particular instance of adversarial graph burning. I also included notes on the maximum possible length of burning sequences, which gives a useful bound for how many burning sequences can exist.
+* Reflected a bit more on the technique I've used to prove the number of clusters for paths. I've realised that this technique can also be applied, with some modifications, to provide bounds for the number of clusters too (for instance, showing a particular region in a decomposition can have at most n colourings, without showing that this colouring exists). This way, we don't always have to consider how different regions "interact" in order to get some upper bounds.
+* As a very basic example, decomposing graphs into paths is one option, and gives a basic but okay upper bound. And we've already proved the number of clusters for paths!
 
 ## Still to do
+* Try considering graph diameter more, especially for connected graphs - I think graph diameter caused the issue with the Havel-Hakimi generated graphs.
+* Try a few more experiments on the Game of Thrones graph (I was delayed due to debugging)
+* Explore some other possible decompositions of graphs - paths are quite simple, but I imagine there'll be a lot of interaction making the bound relatively loose for graphs of higher degree.
