Some minute tidying up, first crack at monotonicity proof

--- a/minutes/2021-10-27.md
+++ b/minutes/2021-10-27.md
@@ -1,5 +1,20 @@
 # Minutes - 27th October, 2021
 
+Since we missed a meeting last week, we discussed the previous 2 status reports:
+
+* I should look into the relationship between graph diameter and regular graph burning - this could be exploited for adversarial graph burning.
+* It might be useful to prove that, for connected graphs on n vertices, a path has the highest possible number of clusters for one player. (My current idea for proving this is that adding any more edges can never lead to more clusters, but it may lead to the removal of existing clusters). Indeed, if this idea holds, I might be able to show the monotonicity of cluster counts by adding additional edges. This is a very strong result, and it could give some very useful bounds (for instance, by considering a spanning tree of a graph).
+* The competitive cluster counting game (where one player tries to maximise the number of clusters and the other tries to minimise) could be interesting, but it also seems very hard in general. On a path could be a nice compromise - see maker/breaker games for more examples. 
+* One big problem for me is going to be finding a good way to partition graphs in useful ways. Every connected graph can be partitioned into paths and cycles, but this may involve a lot of overlap, making our bounds less useful. One possibility I considered was partitioning the graph into trees and cliques, which could be especially well suited to social network analysis (e.g cliques representing mutual friend groups, paths for the connections between friend groups).
+* Jess recommended that I now consider the maximum number of possible clusters on caterpillar graphs. This seems like a fairly nice extension of paths - indeed, the number of "leaves" at each path node can be bounded, since having loads of legs doesn't make a difference.
+* After this, trees then cactus graphs could be a good, if challenging, extension.
+* Jess also posed a potentially interesting diversion - given a graph and a colouring of the graph, determine whether it's attainable via AGB. I remarked that, although some heuristics could be utilised to gain confidence either way, it's unlikely that this question has an elegant answer in general. Will agreed, and focused on the paths case, which I remarked could potentially be considered as some problem in language theory, although this would be a significant digression.
+
+## Plan for next week
+
+* Prove that paths are extremal for counting clusters in connected graphs, maybe with monotonicity with edges if possible. 
+* Start proving the maximum number of clusters for a caterpillar graph.
+
 graph burning and diameter/maybe radius?
 
 Prove path is extremal? addding a graph gives more edges
@@ -19,4 +34,4 @@ karate network - intro for network science
 
 paths -> caterpillars -> trees -> cactus graphs
 
-bizaree question - 
+bizaree question - given a graph, can it be obtained via AGB?
