Implemented caterpillar cluster counting

--- a/status/2021-11-10.md
+++ b/status/2021-11-10.md
@@ -3,13 +3,15 @@
 ### What I've done
 
 * Come up with an (approximation) algorithm for determining the maximum number of clusters in a caterpillar graph of arbitrary length. The process for this is described further in `CaterpillarPartitions.md`, but the core idea is to partition the graph into pieces that each contain 3 path vertices, consider colourings of each partition element in sequence with certain constraints on the colouring of the ends of each partition element, and use this to construct a directed weighted acyclic graph where edge weights represent additional clusters, so the problem reduces to the well-understood problem of finding a path of maximum weight through a DAG.
-* This method can be easily modified to give an exact burning sequence that colours the graph with this optimal number of clusters.
+* This method can be modified, with a little extra work, to give an exact burning sequence that colours the graph with this optimal number of clusters.
 * As an additional remark, I'm not sure whether this method gives the exact optimal number of clusters, or whether it's just a slightly better lower bound. but if it's the latter, then the bound could be improved by taking larger partitions. This would require more work to examine each partition element, but it would also lead to a shorter DAG by the end.
 * Tested this idea (on paper!) with the bitstring 01011100 - this gives 4 clusters, and given the original graph has 12 vertices, by path extremity this graph can only ever have at most 4 clusters
 * Created the cluster counts for each partition of 3 by hand, and added it as a JSON file I can import and create the DAGs with.
+* Implemented the full algorithm - so far I haven't tested much with it, but the bitstrong 01011100 does seem to give the same result which is good.
 
 
 ### Still to do
 
-* Formalise the algorithm and show its complexity (I think if you assume the cluster counts for each piece are already created it's very efficient, probably linear in the length of the bitstring).
-* Start implementing the algorithm - once I've got the tables this shouldn't be massively hard, and NetworkX provides the `dag_longest_path_length` algorithm for finding the maximum number of clusters once the DAG is created.
+* Show the complexity of the algorithm (this shouldn't be very hard, probably linear in the length of the bitstring?)
+* Try and figure out whether it's an exact algorithm, or whether it only gives us a better lower bound than our previous example.
+* Formally write down the algorithm and describe it.
