--- a/status/2021-11-10.md
+++ b/status/2021-11-10.md
@@ -7,7 +7,7 @@
 * As an additional remark, I'm not sure whether this method gives the exact optimal number of clusters, or whether it's just a slightly better lower bound. but if it's the latter, then the bound could be improved by taking larger partitions. This would require more work to examine each partition element, but it would also lead to a shorter DAG by the end.
 * Tested this idea (on paper!) with the bitstring 01011100 - this gives 4 clusters, and given the original graph has 12 vertices, by path extremity this graph can only ever have at most 4 clusters
 * Created the cluster counts for each partition of 3 by hand, and added it as a JSON file I can import and create the DAGs with.
-* Implemented the full algorithm - so far I haven't tested much with it, but the bitstrong 01011100 does seem to give the same result which is good.
+* Implemented the full algorithm - so far I haven't tested much with it, but the bitstring 01011100 does seem to give the same result which is a good sign.
 
 
 ### Still to do
