Finished caterpillar counting implementation

--- a/status/2021-11-10.md
+++ b/status/2021-11-10.md
@@ -15,3 +15,4 @@
 * Show the complexity of the algorithm (this shouldn't be very hard, probably linear in the length of the bitstring?)
 * Try and figure out whether it's an exact algorithm, or whether it only gives us a better lower bound than our previous example.
 * Formally write down the algorithm and describe it.
+* I think it would be worthwhile to start organising all my work so far, probably in the LaTeX template? Keeping in mind I'll be writing the interim report somewhat soon, and I'd like to make that process as painless as possible.
